# hello-embed

./: AGENTS.md  Cargo.toml  Embed.toml  README.md  link.x  opencode.json
.cargo/: config.toml
.github/workflows/: rust.yml
src/: app.rs  app_builder.rs  buttons.rs  cancellation.rs  clock.rs  hardware.rs  interrupt.rs  main.rs  pin.rs  power.rs  state.rs  system.rs  timing.rs  traits.rs  vector_table.rs
src/app/: cancellation.rs  hardware.rs  mod.rs  rtc_handler.rs  selected_program_id.rs  state.rs
src/app/hardware/: button.rs  face_touch.rs  left_button.rs  mod.rs  right_button.rs  temp_sensor.rs  temperature_sensor.rs
src/drivers/: audio.rs  mod.rs
src/drivers/audio/: mod.rs  notes.rs
src/drivers/button/: mod.rs
src/drivers/display/: animations.rs  mod.rs
src/drivers/display/frames/: digits.rs  images.rs  letters.rs  mod.rs  symbols.rs
src/drivers/screen/: animations.rs  mod.rs
src/drivers/screen/frames/: digits.rs  frame.rs  images.rs  letters.rs  mod.rs  symbols.rs
src/drivers/screens/: animations.rs  mod.rs
src/drivers/screens/frames/: digits.rs  frame.rs  images.rs  letters.rs  symbols.rs
src/drivers/thermometer/: mod.rs
src/peripherals/: mod.rs  register.rs
src/peripherals/gpio/: gpio_pin.rs  mod.rs  p0.rs  p1.rs
src/peripherals/pwm/: mod.rs
src/peripherals/rtc/: mod.rs
src/peripherals/temp/: mod.rs
src/programs/: audio_program.rs  empty_program.rs  love_program.rs  mod.rs  startup_program.rs  temp_program.rs  temperature_alert_program.rs  temperature_program.rs  x_program.rs
